ingest: four import kinds, sample history loading, readiness, rollback, templates
Sales, purchases, product master and competitor prices now share one import
pipeline (ImportKind, per-kind validators/loaders, rollback that undoes
everything a batch created and nothing else references). The Hardin sample
loads through the same path on connect, four kinds claimed and committed in
their own transactions so a failure in one never loses the others; existing
sample tenants self-heal on boot. GET /workspace/readiness reports what's
uploaded and what it unlocks; CSV templates and samples are public downloads.
Sample dates shift by whole days off a fixed anchor so trailing windows
always hold real rows.

Three bugs found and fixed while verifying: ImportBatchView.committable()
was never serialized (a record's derived accessor needs @JsonProperty);
rollback's csv-source cleanup read its own uncommitted status change through
a raw JDBC query that bypassed the flush; one IT used a branch code that
never existed for its tenant. Also enabled RealDataIT's wizard test now that
the prices module (merged from real-data/history-impl) makes it runnable,
fixing its request-body field mapping in the process.

167 backend tests green (146 unit/architecture + 21 integration classes,
Docker/Testcontainers), including RealDataIT's five scenarios: sample
tenant, 30-row custom CSV, products-only tenant with the pricing wizard,
and rollback.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>